fixes and FD stuff